<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <LinearLayout
        android:id="@+id/ln_top_back_arrow_bar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@id/gl_horizontal_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/gl_horizontal_start"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="@dimen/icon_default"
            android:layout_height="@dimen/icon_default"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_arrow_24" />

        <TextView
            style="@style/Theme.TalkTopiAndroid.HeadLine6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/sign_up" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_password"
        style="@style/Theme.TalkTopiAndroid.HeadLine7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/gl_horizontal_start"
        app:layout_constraintTop_toBottomOf="@+id/ln_top_back_arrow_bar" />

    <EditText
        android:id="@+id/et_password"
        style="@style/Theme.TalkTopiAndroid.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_edit_text"
        android:hint="@string/msg_sign_in_input_password"
        app:layout_constraintEnd_toEndOf="@id/gl_horizontal_end"
        app:layout_constraintStart_toStartOf="@id/gl_horizontal_start"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <TextView
        android:id="@+id/tv_check_password"
        style="@style/Theme.TalkTopiAndroid.HeadLine7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password_check"
        app:layout_constraintStart_toStartOf="@id/gl_horizontal_start"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_check_password"
        style="@style/Theme.TalkTopiAndroid.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_edit_text"
        android:hint="@string/msg_sign_in_input_check_password"
        app:layout_constraintEnd_toEndOf="@id/gl_horizontal_end"
        app:layout_constraintStart_toStartOf="@id/gl_horizontal_start"
        app:layout_constraintTop_toBottomOf="@id/tv_check_password" />
</androidx.constraintlayout.widget.ConstraintLayout>